content/_generated-doc/2.7/config/quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_configuration]]link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.source]]`link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.source[quarkus.rabbitmq.devservices.bindings."bindings".source]`

[.description]
--
Source exchange to bind to. Defaults to name of binding instance.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.routing-key]]`link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.routing-key[quarkus.rabbitmq.devservices.bindings."bindings".routing-key]`

[.description]
--
Routing key specification for the source exchange.
--|string 
|`#`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.destination]]`link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.destination[quarkus.rabbitmq.devservices.bindings."bindings".destination]`

[.description]
--
Destination exchange or queue to bind to. Defaults to name of binding instance.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.destination-type]]`link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.destination-type[quarkus.rabbitmq.devservices.bindings."bindings".destination-type]`

[.description]
--
Destination type for binding: queue, exchange, etc.
--|string 
|`queue`


a|icon:lock[title=Fixed at build time] [[quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.arguments-arguments]]`link:#quarkus-smallrye-reactivemessaging-rabbitmq-config-group-rabbit-mq-dev-services-build-time-config-binding_quarkus.rabbitmq.devservices.bindings.-bindings-.arguments-arguments[quarkus.rabbitmq.devservices.bindings."bindings".arguments]`

[.description]
--
Extra arguments for the binding definition.
--|`Map<String,String>` 
|

|===